<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    
	<TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/keystore_options"
         android:textAppearance="?android:attr/textAppearanceLarge" />
    

    <ToggleButton
        android:id="@+id/encryption_toggle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:textOff="@string/enc_off"
        android:textOn="@string/enc_on" />

    <Button
        android:id="@+id/moveKeystore"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_to_external" />

    <Button
        android:id="@+id/resetKeystore"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_keystore" />

     <TextView
         android:id="@+id/contactsText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="15dp"
         android:text="@string/contacts"
         android:textAppearance="?android:attr/textAppearanceLarge" />


     <Button
         android:id="@+id/addContact"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/add_contact" />
 </LinearLayout>