<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout 
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:paddingBottom="10dp"
        android:layout_height="fill_parent" >

	<TextView
		    android:id="@+id/header1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/perma"
		    android:textAppearance="?android:attr/textAppearanceMedium" />

	<LinearLayout
	    android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        
	    <Button
        android:id="@+id/edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2.8"
        android:text="@string/edit" />
	    
	    <Button
        android:id="@+id/view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:layout_weight="3"
        android:text="@string/view" />
    </LinearLayout>

	<TextView
	    android:id="@+id/header3"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/other"
	    android:textAppearance="?android:attr/textAppearanceMedium" />
	
	<Button
	    android:id="@+id/delete"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/delete" />
	
    </LinearLayout>
