<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
            <TextView
		        android:id="@+id/textView1"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:gravity="center"
		        android:text="@string/setup_explain" />

			<EditText
			    android:id="@+id/passwordBox"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:inputType="textVisiblePassword"
			    android:ems="10" />
		
			<CheckBox
			    android:id="@+id/externalCheck"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/external_storage" />

			<ScrollView
			    android:id="@+id/scrollView1"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content" >

			    <LinearLayout
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:orientation="vertical" >

			        <TextView
			            android:id="@+id/textView3"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:text="@string/disclaimer" />
			        
					<Button
					    android:id="@+id/next"
					    android:layout_width="fill_parent"
					    android:layout_height="wrap_content"
					    android:text="@string/agree" />
			        
			    </LinearLayout>
			</ScrollView>

</LinearLayout>